@@ -20,6 +20,9 @@ debhelper (10+unreleased) UNRELEASED; urgency=medium
     options.  The old variants are accepted for compatibility.
     Thanks to Raphaël Hertzog for the suggestion.
     (Closes: #838446)
+  * cmake.pm: If cmake fails, also down CMakeFiles/CMakeOutput.log
+    and CMakeFiles/CMakeError.log if they are present.  Thanks to
+    Michael Banck for the suggestion.  (Closes: #839389)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000
 
